# voxel-creatures-generator

./: README.md  generate.py  pyproject.toml
extra/: example.vox
utils/: data.py  representation.py
