[tool.poetry]
name = "VoxelCreaturesGenerator"
version = "1.0.0"
description = "Generator that can create voxel creatures from a collection of body parts"
authors = ["Raul C. Sîmpetru <raul.simpetru@fau.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
